--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,7 @@
+<%= render 'products/nav_bar' %>
+
 <h1> Your order </h1>
 
-<%= render "nav_bar" %>
 <div class="row row-cols-1 row-cols-md-3 g-4 my-3">
   <div class = "col-6">
     <p>
