--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add Product</h1>
-
 <%= render "nav_bar" %>
+
+<h2 class="text-center">Add Product</h2>
 <%= render "form", product: @product %>
