--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Listing items</h1>
+<%= render 'products/nav_bar' %>
 
+<h2 class="text-center">Listing items</h2>
 <div class="row row-cols-1 row-cols-md-3 g-4 my-3">
   <div class = "col-6">
   <p>
