--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,8 +13,10 @@
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
               <%= link_to 'Show', product_path(product.id), class: "btn btn-sm btn-outline-secondary" %>
-              <%= button_to "Add to Cart", cart_items_path(:product_id => product), method: :post, class: "btn btn-sm btn-outline-secondary"  %>
-              <%= link_to "Buy now", order_create_path(id: product.id), class: "btn btn-sm btn-outline-secondary"  %>
+              <% unless current_user&.has_role?('admin') %>
+                <%= button_to "Add to Cart", cart_items_path(:product_id => product), method: :post, class: "btn btn-sm btn-outline-secondary"  %>
+                <%= link_to "Buy now", order_create_path(id: product.id), class: "btn btn-sm btn-outline-secondary"  %>
+              <% end %>
             </div>
             <small class="text-muted"> <%= product.price %> </small>
           </div>
