--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "nav_bar" %>
+
 <div class="row row-cols-1 row-cols-md-3 g-4 my-3">
   <div class = "col-6">
     <p>
@@ -22,7 +24,9 @@
       <p><%= button_to 'Destroy', product_path(@product), method: :delete, data: { method: :delete, confirm: "are you sure, want to delete this product?", turbo: false } %></p>
     <%end%>
       <p><%= link_to 'Back', products_path(@product) %></p>
-      <p><%= button_to "Add to Cart", cart_items_path(:product_id => @product), method: :post, class: "btn btn-sm btn-outline-secondary"  %></p>
+      <% unless current_user.has_role? :admin %>
+        <p><%= button_to "Add to Cart", cart_items_path(:product_id => @product), method: :post, class: "btn btn-sm btn-outline-secondary"  %></p>
+      <% end %>
     </ul>
   </div>
   <div class = "col-6">
