--- a/app/views/cart_items/show.html.erb
+++ b/app/views/cart_items/show.html.erb
@@ -12,7 +12,7 @@
       <strong>Quantity:</strong>
       <%= @cart_item.quantity %>
     </p>
-    <%if current_user.has_role? :admin %>
+    <%if current_user&.has_role? :admin %>
       <p><%= button_to 'Destroy', cart_item_path(@cart_item.id), method: :delete, data: { method: :delete, confirm: "are you sure, want to delete this product?", turbo: false } %></p>
     <%end%>
   </div>
