--- a/app/views/products/_nav_bar.html.erb
+++ b/app/views/products/_nav_bar.html.erb
@@ -8,7 +8,7 @@
       <div class="navbar-nav">
         <%= button_to "Sign_out", destroy_user_session_path, method: :delete, :onclick => "return confirm('Are you sure you want to sign out?')", class: "navbar-brand" %>
       </div>
-      <%if current_user.has_role? :admin %>
+      <%if current_user&.has_role? :admin %>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a <%= link_to "Edit", edit_user_registration_path(current_user), class: "navbar-brand"  %></a>
