--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
       <p><%= button_to 'Destroy', product_path(@product), method: :delete, data: { method: :delete, confirm: "are you sure, want to delete this product?", turbo: false } %></p>
     <%end%>
       <p><%= link_to 'Back', products_path(@product) %></p>
-      <% unless current_user.has_role? :admin %>
+      <% unless current_user&.has_role? :admin %>
         <p><%= button_to "Add to Cart", cart_items_path(:product_id => @product), method: :post, class: "btn btn-sm btn-outline-secondary"  %></p>
       <% end %>
     </ul>
