Added cart option to navbar and minor changes to registration form

--- a/app/views/cart_items/show.html.erb
+++ b/app/views/cart_items/show.html.erb
@@ -1,4 +1,6 @@
-<h1> Your product </h1>
+<%= render 'products/nav_bar' %>
+
+<h2 class="text-center"> Your product </h2>
 
 <div class="row row-cols-1 row-cols-md-3 g-4 my-3">
   <div class = "col-6">
